--- a/public/index.html
+++ b/public/index.html
@@ -23,12 +23,7 @@
     -->
     <title>imagenerator</title>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="stylesheet" href="%PUBLIC_URL%/fonts.css" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
