--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       content="width=device-width, initial-scale=1, maximum-scale=1"
     />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Your new favourite image generator." />
+    <meta name="description" content="hi, im a generator." />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
