--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,11 @@
       content="width=device-width, initial-scale=1, maximum-scale=1"
     />
     <meta name="theme-color" content="#000000" />
+
     <meta name="description" content="hi, im a generator." />
+    <meta name="twitter:card" content="summary" />
+    <meta property="og:site_name" content="imagenerator" />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
