--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,20 @@
     />
     <meta name="theme-color" content="#000000" />
 
-    <meta name="description" content="hi, im a generator." />
     <meta name="twitter:card" content="summary" />
     <meta property="og:site_name" content="imagenerator" />
+
+    <title>imagenerator</title>
+    <meta property="og:title" content="imagenerator" />
+    <meta name="twitter:title" content="imagenerator" />
+
+    <meta name="description" content="hi, im a generator" />
+    <meta property="og:description" content="hi, im a generator" />
+    <meta name="twitter:description" content="hi, im a generator" />
+
+    <meta name="canonical" content="https://imagenerator.net" />
+    <meta property="og:url" content="https://imagenerator.net" />
+    <meta name="twitter:url" content="https://imagenerator.net" />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -28,7 +39,6 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>imagenerator</title>
 
     <link rel="stylesheet" href="%PUBLIC_URL%/fonts.css" />
   </head>
