Add twitter card image

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,10 @@
 
     <meta name="twitter:card" content="summary" />
     <meta property="og:site_name" content="imagenerator" />
+    <meta
+      name="twitter:image"
+      content="https://imagenerator.net/logo-round.png"
+    />
 
     <title>imagenerator</title>
     <meta property="og:title" content="imagenerator" />
