--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,7 @@
 
     <meta name="twitter:card" content="summary" />
     <meta property="og:site_name" content="imagenerator" />
-    <meta
-      name="twitter:image"
-      content="https://imagenerator.net/logo-round.png"
-    />
+    <meta name="twitter:image" content="%PUBLIC_URL%/logo-round.png" />
 
     <title>imagenerator</title>
     <meta property="og:title" content="imagenerator" />
@@ -28,7 +25,7 @@
     <meta property="og:url" content="https://imagenerator.net" />
     <meta name="twitter:url" content="https://imagenerator.net" />
 
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
